--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>16.4</title>
             <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz"
-                crossorigin="anonymous">
+            crossorigin="anonymous">
             <link href="https://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet">
         <link rel="stylesheet" href="css/style.css">        
     </head>
@@ -20,7 +21,7 @@
             <div>
                 <button class="trigger"> Random quote </button>
                 <a href="#" target="_blank" class="tweet">
-                    <i class="fab fa-twitter"></i> Tweet</a>
+                <i class="fab fa-twitter"></i> Tweet</a>
             </div>
         </main>
         <script src="js/script.js"></script>
