--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
             <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz"
             crossorigin="anonymous">
             <link href="https://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet">
-        <link rel="stylesheet" href="css/style.css">        
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
         <main>
@@ -21,7 +21,8 @@
             <div>
                 <button class="trigger"> Random quote </button>
                 <a href="#" target="_blank" class="tweet">
-                <i class="fab fa-twitter"></i> Tweet</a>
+                    <i class="fab fa-twitter"></i> Tweet
+                </a>
             </div>
         </main>
         <script src="js/script.js"></script>
